# canny_edge_my_face

./: CMakeLists.txt  README.md  package.xml
src/: edge_detector.py
