<?xml version="1.0"?>
<package>
  <name>canny_edge_my_face</name>
  <version>0.0.0</version>
  <description>The canny_edge_my_face package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="keivan@todo.todo">keivan zavari</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_camera</build_depend>
  <run_depend>cv_camera</run_depend>

</package>
